--- a/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
+++ b/isof/M27_camping/app/src/main/res/layout/recyclerview_reserva.xml
@@ -39,18 +39,7 @@
             android:layout_weight="1"
             android:textSize="14sp"
             android:layout_marginLeft="8dp"/>
-
-
-        <!-- Precio total de la reserva -->
-        <!--TextView
-            android:id="@+id/precioTotal"
-            android:layout_width="0dp"
-            android:layout_height="31dp"
-            android:layout_weight="1"
-            android:textSize="14sp"
-            android:layout_marginLeft="8dp"/-->
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,6 +68,20 @@
             android:textSize="14sp"
             android:layout_marginLeft="8dp"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <!-- Precio total de la reserva -->
+        <TextView
+            android:id="@+id/precioTotal"
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:textSize="14sp"
+            android:layout_marginLeft="8dp"/>
     </LinearLayout>
 
     <!-- Contenedor horizontal para iconos de editar y eliminar -->
